fixed the layout issue

--- a/customer/src/components/Customer.css
+++ b/customer/src/components/Customer.css
@@ -4,6 +4,7 @@
     margin-right: 50px;
     margin-top: 50px;
     margin-bottom: 10px;
+    color: #FF5858;
 }
 .table{
     height: 100vh;
