--- a/customer/src/components/Navigation.css
+++ b/customer/src/components/Navigation.css
@@ -1,5 +1,5 @@
 .menu {
-    width: 256px;
+    width: 257px;
     color: #3431BE;
     height: 100vh;
     background-color: #FE6666 !important;
