--- a/customer/src/components/component.css
+++ b/customer/src/components/component.css
@@ -31,6 +31,11 @@
     float: left;
 }
 
-.test{
-    float: right;
+/* .dashboard{
+    height: 100vh;
+    display: flex;
+} */
+
+.div{
+    display: flex;
 }
